src/test/06-Errors/error-unary.txt
error-unary.ck:1:1: error: cannot resolve postfix operator '++' on type 'time'
[1] now++;
    ^
